
#definition of common erlebar source files

set(erlebar_headers
	#${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiSlamParam.h
	#${SL_PROJECT_ROOT}/apps/app_demo_wai/source/WAIApp.h
	${SENS_ROOT}/SENS.h
	${SENS_ROOT}/SENSARCore.h
	${SENS_ROOT}/SENSCalibration.h
	${SENS_ROOT}/SENSCalibrationEstimator.h
	${SENS_ROOT}/SENSCamera.h
	${SENS_ROOT}/SENSCvCamera.h
	${SENS_ROOT}/SENSException.h
	${SENS_ROOT}/SENSFrame.h
	${SENS_ROOT}/SENSGps.h
	${SENS_ROOT}/SENSOrientation.h
	${SENS_ROOT}/SENSRecorder.h
	${SENS_ROOT}/SENSRecorderDataHandler.h
	${SENS_ROOT}/SENSSimClock.h
	${SENS_ROOT}/SENSSimHelper.h
	${SENS_ROOT}/SENSSimulated.h
	${SENS_ROOT}/SENSSimulator.h
	${SENS_ROOT}/SENSUtils.h
	${SENS_ROOT}/SENSVideoStream.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/CompassAlignment.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/DeviceData.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/ErlebAR.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/ErlebARApp.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/ErlebAREvents.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GLSLHessian.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GLSLextractor.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GPSMapper2D.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AboutGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AppDemoGuiInfosDialog.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AppDemoWaiGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AreaInfoGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AreaTrackingGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/CameraTestGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/DownloadGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/GUIPreferences.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/LocationMapGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SelectionGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SensorTestGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SettingsGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SimHelperGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/TestRunnerGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/TutorialGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/WelcomeGui.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiAutoCalibration.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiCompassAlignment.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiError.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosFrameworks.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosScene.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosSensors.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosTracking.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiProperties.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiSceneGraph.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiSlamLoad.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiStatsDebugTiming.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiStatsTiming.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiStatsVideo.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiTrackedMapping.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiTransform.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiUIPrefs.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiVideoControls.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiVideoStorage.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiUtils.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/ImageBuffer.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/MapPointEdition.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Resources.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/SlamParams.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/UserGuidance.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/VideoBackgroundCamera.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/WAIAutoCalibration.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/WAIEvent.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/WAIUtils.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/scenes/AppWAIScene.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/scenes/CameraOnlyScene.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/scenes/UserGuidanceScene.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/AboutView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/AreaInfoView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/AreaTrackingView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/CameraTestView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/DownloadView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/LocationMapView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/SelectionView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/SensorTestView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/SettingsView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/StartUpView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/TestRunnerView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/TestView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/TutorialView.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/View.h
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/WelcomeView.h
	${SL_PROJECT_ROOT}/apps/source/AsyncWorker.h
	${SL_PROJECT_ROOT}/apps/source/LogWindow.h
	${SL_PROJECT_ROOT}/apps/source/sm/Event.h
	${SL_PROJECT_ROOT}/apps/source/sm/EventData.h
	${SL_PROJECT_ROOT}/apps/source/sm/EventHandler.h
	${SL_PROJECT_ROOT}/apps/source/sm/EventSender.h
	${SL_PROJECT_ROOT}/apps/source/sm/StateMachine.h
	${SL_PROJECT_ROOT}/apps/source/wai/AppWAISlamParamHelper.h
	${SL_PROJECT_ROOT}/apps/source/wai/FeatureExtractorFactory.h
	${SL_PROJECT_ROOT}/apps/source/wai/ImGuiWrapper.h
	${SL_PROJECT_ROOT}/apps/source/wai/WAIMapStorage.h
    ${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiMapPointEditor.h
	)
	
set(erlebar_sources
	#${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiSlamParam.cpp
	#${SL_PROJECT_ROOT}/apps/app_demo_wai/source/WAIApp.cpp
	${SENS_ROOT}/SENSARCore.cpp
	${SENS_ROOT}/SENSCalibration.cpp
	${SENS_ROOT}/SENSCalibrationEstimator.cpp
	${SENS_ROOT}/SENSCamera.cpp
	${SENS_ROOT}/SENSCvCamera.cpp
	${SENS_ROOT}/SENSGps.cpp
	${SENS_ROOT}/SENSOrientation.cpp
	${SENS_ROOT}/SENSRecorder.cpp
	${SENS_ROOT}/SENSRecorderDataHandler.cpp
	${SENS_ROOT}/SENSSimHelper.cpp
	${SENS_ROOT}/SENSSimulated.cpp
	${SENS_ROOT}/SENSSimulator.cpp
	${SENS_ROOT}/SENSUtils.cpp
	${SENS_ROOT}/SENSVideoStream.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/CompassAlignment.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/ErlebAR.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/ErlebARApp.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GLSLHessian.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GLSLextractor.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GPSMapper2D.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AboutGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AppDemoGuiInfosDialog.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AppDemoWaiGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AreaInfoGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/AreaTrackingGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/CameraTestGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/DownloadGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/GUIPreferences.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/LocationMapGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SelectionGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SensorTestGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SettingsGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/SimHelperGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/TestRunnerGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/TutorialGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui/WelcomeGui.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiAutoCalibration.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiCompassAlignment.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiError.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosFrameworks.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosScene.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosSensors.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiInfosTracking.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiProperties.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiSceneGraph.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiSlamLoad.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiStatsDebugTiming.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiStatsTiming.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiStatsVideo.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiTrackedMapping.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiTransform.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiUIPrefs.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiVideoControls.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiVideoStorage.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiUtils.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/MapPointEdition.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Resources.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/UserGuidance.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/WAIAutoCalibration.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/scenes/AppWAIScene.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/scenes/CameraOnlyScene.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/scenes/UserGuidanceScene.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/AboutView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/AreaInfoView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/AreaTrackingView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/CameraTestView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/DownloadView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/LocationMapView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/SelectionView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/SensorTestView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/SettingsView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/StartUpView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/TestRunnerView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/TestView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/TutorialView.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/View.cpp
	${SL_PROJECT_ROOT}/apps/app_demo_wai/source/views/WelcomeView.cpp
	${SL_PROJECT_ROOT}/apps/source/AsyncWorker.cpp
	${SL_PROJECT_ROOT}/apps/source/LogWindow.cpp
	${SL_PROJECT_ROOT}/apps/source/sm/StateMachine.cpp
	${SL_PROJECT_ROOT}/apps/source/wai/FeatureExtractorFactory.cpp
	${SL_PROJECT_ROOT}/apps/source/wai/ImGuiWrapper.cpp
	${SL_PROJECT_ROOT}/apps/source/wai/WAIMapStorage.cpp
    ${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab/AppDemoGuiMapPointEditor.cpp
	)
	
set(erlebar_include_directories
		${SL_PROJECT_ROOT}/apps/source
		${SL_PROJECT_ROOT}/apps/source/wai
		${SENS_ROOT}
		${SENS_ROOT}/..
		${SL_PROJECT_ROOT}/apps/app_demo_wai/source
		${SL_PROJECT_ROOT}/apps/app_demo_wai/source/Gui
		${SL_PROJECT_ROOT}/apps/app_demo_wai/source/GuiPrefab
		${SL_PROJECT_ROOT}/modules/sl/source/accelstruct
		${SL_PROJECT_ROOT}/modules/sl/source/animation
		${SL_PROJECT_ROOT}/modules/sl/source/cv
		${SL_PROJECT_ROOT}/modules/sl/source/gl
		${SL_PROJECT_ROOT}/modules/sl/source/input
		${SL_PROJECT_ROOT}/modules/sl/source/mesh
		${SL_PROJECT_ROOT}/modules/sl/source/node
		${SL_PROJECT_ROOT}/modules/sl/source/optix
		${SL_PROJECT_ROOT}/modules/sl/source/ray
		${SL_PROJECT_ROOT}/modules/sl/source
		${SL_PROJECT_ROOT}/modules/math/source
	)


if("${SYSTEM_NAME_UPPER}" MATCHES "ANDROID")
    set(IDE_FOLDER "Android")
    add_subdirectory(android/app)
elseif("${SYSTEM_NAME_UPPER}" MATCHES "IOS")
	message("Adding iOS subdirectory (app_demo_wai)")
	add_subdirectory(iOS)
else()
    add_subdirectory(glfw)
endif()
