add_subdirectory(ch00_new_cpp_features)
add_subdirectory(ch06_ColorCube)
add_subdirectory(ch07_DiffuseCube)
add_subdirectory(ch07_DiffuseSphere)
add_subdirectory(ch08_BlinnPhongLighting)
add_subdirectory(ch09_TextureMapping)
add_subdirectory(ParticleGenerator)
add_subdirectory(Geom)
add_subdirectory(cv01_ChangeBrightnessAndContrast)
add_subdirectory(cv02_CalderonFilter)
add_subdirectory(cv06_WarpTriangle)
add_subdirectory(cv07_MeshWarping)
add_subdirectory(cv08_MeshMorphing)
add_subdirectory(cv13_FaceTracking)
add_subdirectory(cv13_FacialLandmarkDetection)
add_subdirectory(cv13_HeadPoseEstimation)
add_subdirectory(cv13_Snapchat2D)
add_subdirectory(cv15_YoloV3)
if (SL_BUILD_VULKAN_APPS)
    add_subdirectory(ch09_TextureMapping_Vulkan)
endif ()